test/subjects/invalid/bad_hint.php
<?php

	function f (int $x = "string")
	{
	}

	f ("my_string");
?>
